2013-09-17  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: The right behavior of Ctrl + A shortcut in entries is
	restored.

2013-09-16  Yury Aliaev  <mutab0r@rambler.ru>
	* app/menubar.c: The right behavior of Ctrl + C/V/X shortcuts in entries
	is restored.

2013-04-04  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.c, app/preferences.c: Code cleanups.

2013-04-02  Yury Aliaev  <mutab0r@rambler.ru>
	* app/main.c, app/midi-09x.c, app/midi.h, app/sample-display.c,
	app/sample-editor.c: Fixed wrong memory access and leaks detected 
	by Valgrind.

2013-03-30  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/alsa1x.c: Error recovery is implemented (inspired by aplay.c).

2013-03-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Combined OSS driver for both input and output is done,
	some bugs are fixed. OSS sampling now supports 8/16 bit, mono/stereo;
	* app/drivers/alsa1x.c, app/sample-editor.c: Bugs introduced by new code are
	fixed.

2013-03-23  Yury Aliaev  <mutab0r@rambler.ru>
	* app/driver-inout.h, app/mixer.h, app/module-info.[ch],
	app/sample-display.[ch], app/sample-editor.[ch], app/drivers/oss-import.c:
	Sampling at arbitrary resolution and mono/stereo mode is implemented.
	Sampling functions now work a bit faster because of less memory copying.
	Both recording and sample loading allow stereo samples to be stored at two
	subsequent samples;
	* app/drivers/alsa1x.c: (renamed from alsa1x-output.c) Recording from ALSA
	is implemented as well as endianess handling. Automatic detection of
	available hardware devices is added;
	* app/main.c, app/menubar.c, app/midi.h, app/midi-settings-09x.c,
	app/midi-settings.h, app/midi-utils.h, configure.in, Makefile.am,
	app/Makefile.am: old ALSA support is dropped.

2013-03-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audioconfig.[ch], app/gui-subs.[ch], app/keys.c, app/module-info.c,
	app/tracker-settings.c: Improved look, cleanups and improvments.

2013-03-20  Yury Aliaev  <mutab0r@rambler.ru>