@@ -4,7 +4,6 @@
 in the callback) and main notebook switch callback;
 22) ESD driver reported to produce greater delay at start than in ST-gtk1;
 36) Pressing Ctrl-O in Instrument editor crashes ST at some machines;
-42) Check padding (zeroes, spaces) for XI.
 45) Volume ramping->normalize does somethong wrong (subsequently decreases positive half-periods),
 at 8 bit samples only, st_sample_cutoff_lowest_8_bits() and the maximum value is negative;
 49) Update or even rewrite JACK driver;
